Fix an issue causing buttons not to work on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ input {
 }
 
 button {
+    cursor: pointer;
     width: 100%;
 }
 button[type="submit"] {
